src/test/resources/testinput/parsable/symtab/invalid_coco/setoperations14.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl setoperations14 {
  context Person p inv:
    p.auctions.messages == p.auctions.asList.messages;
}
